--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -42,6 +42,14 @@ header {
 
 .col-9 {
     width: 75%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+.col-4 {
+    width: 33.3333%;
 }
 
 .logo {
@@ -144,7 +152,7 @@ input {
     padding-left: 20px;
 }
 
-button {
+.loupe {
     height: 30px;
     width: 30px;
     position: absolute;
@@ -189,4 +197,307 @@ button {
 
 .cart img {
     margin: 25%;
+}
+
+main {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 25px 0;
+}
+
+.slider {
+    height: 400px;
+    background-color: rgba(35, 90, 147, 0.5);
+}
+
+.filter {
+    margin-right: 15px;
+    height: 840px;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.bread-crumbs {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-left: 15px;
+    height: 64px;
+}
+
+ul.breadcrumbs {
+    list-style: none;
+  }
+  
+  ul.breadcrumbs li {
+    display: inline;
+    font-size: 14px;
+  }
+  
+  ul.breadcrumbs li+li:before {
+    padding: 8px;
+    color: #96b8dc;
+    content: "\003E";
+  }
+  
+  ul.breadcrumbs li a {
+    color: #96b8dc;
+    text-decoration: none;
+  }
+  
+  ul.breadcrumbs li a span {
+      text-decoration: underline;
+  } 
+
+
+.product-title {
+    margin: 0 15px;
+    height: 100px;
+    margin-top: -5px;
+}
+
+.product-title h1 {
+    font-weight: bold;
+    font-size: 48px;
+    color: white;
+}
+.sorting {
+    position: relative;
+    margin-left: 15px;
+    height: 100px;
+}
+
+.sorting li {
+    float: left;
+    width: 100%;
+}
+
+.sorting a{
+    background-color: rgba(255, 255, 255, 0.5);
+    padding-left: 20px;
+    font-size: 21px;
+    color: #2c71b8;
+    width: 100%;
+    line-height: 40px;
+    display: block;
+    height: 40px;
+    top:0px;
+    border: 1px solid white;
+    text-decoration: none;
+}
+
+.sorting li:hover a {
+    background-color: #2c71b8;
+    color: white;
+}
+
+.key-2 {
+    background-image: url(images/arrow_down.svg);
+    display: none;
+    position: absolute;
+    background-repeat: no-repeat;
+    bottom: 72px;
+    left: 245px;
+    height: 1em;
+    width: 1em;
+    margin: 0 0.15em 0 0.3em;
+    vertical-align: -0.3em;
+    background-size: 1em 1em; 
+    filter: invert(100%);
+   }
+
+.dropdown-content-2 {
+    position: absolute;
+    font-size: 21px;
+    z-index: 10;
+    display: none;
+    list-style: none;
+}
+
+.dropdown-content-2 li {
+    border: none;
+    width: 100%;
+    height: 40px;
+}
+
+.dropdown-content-2 a {
+    color: white;
+    background-color: #2c71b8;
+}
+
+.sorting li:hover .dropdown-content-2 {
+    display: block;
+}
+
+.sorting li:hover .key-2 {
+    display: block;
+}
+
+.sorting li .dropdown-content-2 a:hover {
+    color: #2c71b8;
+    background-color: white;
+}
+
+.sorting li:hover .key1 {
+    display: block;
+}
+
+
+.sorting::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.product {
+    border: 1px solid white;
+    margin: 0 15px 30px 15px;
+    background-color: rgba(44, 113, 184, 0.75);
+}
+.product-face {
+    background-color: rgba(255, 255, 255, 0.75);
+    height: 180px;
+    margin-bottom: 15px;
+    position: relative;
+}
+
+
+.product-face img{
+    position: absolute;
+    display: block;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+.heart {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #2c71b8;
+    background-image: url(images/heart.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    left: 220px;
+    top: 50px;
+}
+.cube {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #2c71b8;
+    background-image: url(images/cube.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    left: 220px;
+    top: 10px;
+}
+
+.product-name {
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+    margin: 0 0 15px 15px;
+}
+.about p{
+    font-size: 21px;
+    font-weight: 100;
+    color: white;
+    margin: 0 0 15px 15px;
+}
+.type {
+    color: white;
+    font-size: 21px;
+    margin: 0 0 15px 15px;
+}
+
+.type span{
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.screen-size {
+    margin: 0 0 15px 15px;
+    color: white;
+    font-size: 21px;
+}
+
+.screen-size span {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.ram {
+    margin: 0 0 15px 15px;
+    color: white;
+    font-size: 21px;
+}
+
+.ram span {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.price div {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    font-size: 48px;
+    text-align: center;
+    float: left;
+    margin: 0 auto;
+}
+.price .cent {
+    display: inline-block;
+    font-size: 30px;
+    padding-bottom: 10px;
+}
+
+.more{
+    padding: 0 25px;
+    margin-bottom: 15px;
+}
+
+.more button {
+    width: 210px;
+    height: 50px;
+    font-weight: bold;
+    font-size: 21px;
+    color: white;
+    background-color: #2c71b8;
+    border: 1px solid white;
+    text-transform: uppercase;
+}
+
+.add-cart{
+    padding: 0 25px;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.add-cart button {
+    width: 210px;
+    height: 50px;
+    font-weight: bold;
+    font-size: 21px;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.2);
+    text-transform: uppercase;
+    border-color: transparent;
+}
+.cart1 {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    border: none;
+    top: 9px;
+    right: 35px;
+    background-repeat: no-repeat;
+    background-image: url(images/cart2.png);
+    background-position: center;
+    cursor: pointer;
+}
+
+.load-more h2{
+    font-size: 36px;
+    text-align: center;
+    color: white;
+    font-weight: 300;
 }
