--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ header {
 
 .key {
     background-image: url(images/arrow_down.svg);
-    display: none;
     position: absolute;
     background-repeat: no-repeat;
     bottom: 18px;
@@ -102,7 +101,6 @@ header {
     margin: 0 0.15em 0 0.3em;
     vertical-align: -0.3em;
     background-size: 1em 1em;
-    filter: invert(100%);
 }
 
 
@@ -114,11 +112,12 @@ header {
     display: none;
     list-style: none;
     left: 146px;
+    margin-left: 2px;
 }
 
 .dropdown-content li {
     border: none;
-    width: 293px;
+    width: 298px;
     height: 50px;
 }
 
@@ -132,7 +131,7 @@ header {
 }
 
 .menu li:hover .key {
-    display: block;
+    filter: invert(100%);
 }
 
 .menu li .dropdown-content a:hover {
@@ -168,6 +167,13 @@ input {
     background-image: url(images/search.png);
     background-position: center;
     cursor: pointer;
+}
+
+.loupe:hover {
+    background: rgba(44, 113, 184, 0.5);
+    background-repeat: no-repeat;
+    background-image: url(images/search.png);
+    background-position: center;
 }
 
 .cart-box {
@@ -249,18 +255,18 @@ main {
 
 .product-name {
     text-indent: -2px;
-    height: 100px;
     margin-left: 15px;
     font-weight: bold;
     font-size: 48px;
     color: white;
+    margin-bottom: 50px;
 }
 
 
 .sort {
     margin-right: 15px;
     position: relative;
-    height: 100px;
+    margin-bottom: 50px;
 }
 
 .sort li {
@@ -292,8 +298,8 @@ main {
     display: none;
     position: absolute;
     background-repeat: no-repeat;
-    bottom: 72px;
-    left: 245px;
+    bottom: 11px;
+    left: 253px;
     height: 1em;
     width: 1em;
     margin: 0 0.15em 0 0.3em;
@@ -353,10 +359,6 @@ main {
     background-color: rgba(44, 113, 184, 0.75);
 }
 
-/* .product:not(:nth-child(3n)) {
-    margin-right: 30px;
-} */
-
 .product-images {
     background-color: rgba(255, 255, 255, 0.75);
     height: 180px;
@@ -373,6 +375,31 @@ main {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
+}
+
+.product-zoom {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #2c71b8;
+    background-image: url(images/product-zoom.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.product-zoom:hover {
+    width: 30px;
+    height: 30px;
+    background-color: #2c71b8;
+    border: 1px solid #2c71b8;
+    background-image: url(images/product-zoom-select.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    right: 10px;
+    top: 10px;
 }
 
 .product-like {
@@ -398,30 +425,6 @@ main {
     position: absolute;
     right: 10px;
     top: 50px;
-}
-.product-zoom {
-    width: 30px;
-    height: 30px;
-    border: 1px solid #2c71b8;
-    background-image: url(images/product-zoom.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-}
-
-.product-zoom:hover {
-    width: 30px;
-    height: 30px;
-    background-color: #2c71b8;
-    border: 1px solid #2c71b8;
-    background-image: url(images/product-zoom-select.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    right: 10px;
-    top: 10px;
 }
 
 .product-title {
@@ -455,7 +458,7 @@ main {
     color: white;
     font-size: 48px;
     text-align: center;
-    margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 .price sup {
@@ -479,19 +482,8 @@ main {
 }
 
 .btn:hover {
-    display: block;
-    margin: 0 auto;
-    padding: 0 25px;
-    margin-bottom: 15px;
-    width: 210px;
-    height: 50px;
-    font-weight: bold;
-    font-size: 21px;
-    color: white;
     background-color: rgba(255, 255, 255, 0.2);
     border:none;
-    text-transform: uppercase;
-    cursor: pointer;
 }
 
 .btn-add-to-cart {
@@ -500,13 +492,15 @@ main {
     background-position: bottom 16px right 10px;
     background-repeat: no-repeat;
 }
+.btn-add-to-cart div {
+    background-image: url(images/cart2.png);
+    background-repeat: no-repeat;
+}
 
 .btn-add-to-cart:hover {
+    border: 1px solid transparent;
     margin-bottom: 30px;
-    background-image: url(images/cart2.png);
-    background-position: bottom 16px right 10px;
-    background-repeat: no-repeat;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: C;
 }
 
 .load-more {
