--- a/style.css
+++ b/style.css
@@ -216,6 +216,66 @@ main {
 
 .row {
     margin-right: -15px;
+    margin-left: -15px;
+}
+
+.filter {
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 30px 30px 15px 30px;
+    margin-right: 30px;
+}
+
+.filter-title {
+    font-size: 21px;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 25px;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+label:before {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    border: 1px solid white;
+    cursor: pointer;
+} 
+
+input[type="checkbox"]:checked + label:before {
+    background-color: #fff;
+}
+
+.check {
+    font-size: 21px;
+    font-weight: 100;
+    color: white;
+    margin-bottom: 25px;
+}
+
+.check label {
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 2px;
+}
+
+.check:last-child {
+    margin-bottom: 60px;
+}
+
+.more-options {
+    margin: 0 0 30px 0;
+    text-align: center;
+}
+
+.more-options a {
+    text-decoration: none;
+    font-size: 21px;
+    font-weight: lighter;
+    color: white;
 }
 
 .breadcrumbs {
@@ -438,7 +498,7 @@ main {
     font-size: 21px;
     font-weight: 100;
     color: white;
-    margin: 0 0 15px 15px;
+    margin: 0 15px 15px 15px;
 }
 
 .product-features {
